# avro

./: LICENSE  README.md  avro.cabal
src/Data/: Avro.hs
src/Data/Avro/: Core.hs  Generic.hs
