name:           avro
version:        0.0.1
cabal-version:  >= 1.2
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      2015 Jeff Douglas
author:         Jeff Douglas
maintainer:     inbuninbu@gmail.com
stability:      alpha
homepage:       https://github.com/tendril/avro
bug-reports:    https://github.com/tendril/avro/issues
synopsis:       Avro for Haskell
description:    `avro` is an implementation of the <https://avro.apache.org/ Avro> data serialization and RPC specification.

library
  hs-source-dirs:  src
  build-depends:   base >= 4
                 , bytestring >= 0.10.4.0
                 , text >= 1.2.0.4
                 , cereal >= 0.4.1.1
                 , containers >= 0.5.5.1
                 , mtl >= 2.2.1
                 , aeson >= 0.8.0.2
                 , scientific >= 0.3.3.8
                 , vector >= 0.10.9.1
                 , zlib >= 0.5.4.1
                 , pipes
                 , pipes-network
                 , network
                 , Crypto
                 , generic-deriving
  ghc-options:     -O2 -Wall
  exposed-modules: Data.Avro
                 , Data.Avro.Core
                 , Data.Avro.Network
  extensions:      OverloadedStrings
